--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@ body{
     font-family: 'Noto Sans', sans-serif;
 }
 
+body *{
+    box-sizing: border-box;
+}
+
 .main-login{
     width: 100vw;
     height: 100vh;
@@ -21,6 +25,11 @@ body{
     justify-content: center;
     align-items: center;
     flex-direction: column;
+}
+
+.left-login-image{
+    font-size: 35vw;
+    width: 35vw;
 }
 
 .left-login > h1{
@@ -98,4 +107,38 @@ body{
     background: #00ff88;
     cursor: pointer;
     box-shadow: 0px 10px 40px -12px #00ff8052;
+}
+
+@media only screen and (max-width: 950px){
+    .card-login{
+        width: 85%
+    }
+}
+
+@media only screen and (max-width: 600px){
+    .main-login{
+        flex-direction: column;
+    }
+    
+    .left-login > h1{
+        display: none;
+    }
+    
+    .left-login{
+        width: 100%;
+        height: auto;
+    }
+    
+    .right-login{
+        width: 100%;
+        height: auto;
+    }
+
+    .left-login-image{
+        width: 40vh;
+    }
+
+    .card-login{
+        width: 90%;
+    }
 }
